# monkey-see-monkey-patch

./: README.md  modified_lektor.py  monkey_see_monkey_patch.lektorproject  pyproject.toml
content/: contents.lr
content/blog/first-post/: contents.lr
templates/: layout.html
